# scalopus

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ScalopusConfig.cmake.in  (+2 more)
scalopus_catapult/: CMakeLists.txt  README.md
scalopus_catapult/include/scalopus_catapult/: catapult_backend.h  catapult_recorder.h  catapult_server.h  endpoint_manager.h  endpoint_manager_poll.h  general_provider.h  general_source.h  lttng_provider.h  lttng_source.h  trace_event_provider.h  trace_event_source.h  trace_session.h  tracing_endpoint.h  tracing_session.h
scalopus_catapult/src/: catapult_backend.cpp  catapult_backend.h  catapult_recorder.cpp  catapult_server.cpp  endpoint_manager.cpp  endpoint_manager_poll.cpp  general_provider.cpp  general_source.cpp  lttng_provider.cpp  lttng_source.cpp  scalopus_catapult_server.cpp  trace_event_source.cpp  trace_session.cpp  trace_session.h  tracing_endpoint.cpp  tracing_session.cpp  tracing_target.cpp
scalopus_examples/: CMakeLists.txt  README.md
scalopus_examples/src/: dump_mappings.cpp  embedded_catapult_recorder.cpp  embedded_catapult_server.cpp  example_embedded_catapult_server.cpp  example_scope_tracepoints.cpp  example_scope_tracepoints_native.cpp  example_scope_tracepoints_random.cpp  example_scope_tracepoints_random_native.cpp  introspect_endpoints.cpp  query_servers.cpp  random_callstacks.cpp  readme_example.cpp  showcase_count_events.cpp  showcase_counters.cpp  showcase_marker_events.cpp  showcase_toggle_tracepoints.cpp
scalopus_general/: CMakeLists.txt  README.md
scalopus_general/include/scalopus_general/: destructor_callback.h  endpoint_introspect.h  endpoint_process_info.h  general.h  map_tracker.h  thread_name_tracker.h  thread_naming.h
scalopus_general/include_consumer/scalopus_general/: endpoint_manager_poll.h  general_provider.h  general_source.h
scalopus_general/src/: endpoint_introspect.cpp  endpoint_manager_poll.cpp  endpoint_process_info.cpp  general_provider.cpp  general_source.cpp  thread_name_tracker.cpp
scalopus_general/test/: CMakeLists.txt  test_endpoint_process_info.cpp  test_general_thread_naming_macros.cpp
scalopus_interface/: CMakeLists.txt  README.md
scalopus_interface/include/scalopus_interface/: destination.h  endpoint.h  exceptions.h  transport.h  transport_factory.h  types.h
scalopus_interface/src/: destination.cpp  endpoint.cpp  endpoint_introspect.cpp  endpoint_manager.cpp  trace_event_source.cpp  transport.cpp  transport_factory.cpp
scalopus_lttng/: CMakeLists.txt
scalopus_lttng/src/: babeltrace_parser.cpp  babeltrace_test.cpp  babeltrace_tool.cpp  client_scope_tracing.cpp  ctfevent.cpp  endpoint_native_tracepoint_collector.cpp  endpoint_scope_tracing.cpp  lttng_provider.cpp  lttng_source.cpp  native_trace_endpoint_receive.cpp  native_trace_endpoint_receive.h  native_trace_endpoint_receiver.cpp  native_trace_endpoint_receiver.h  native_trace_endpoint_sender.cpp  native_trace_provider.cpp  native_trace_source.cpp  scope_trace_raii.cpp  scope_trace_tracker.cpp  scope_tracepoint.cpp  scope_tracepoint_lttng.cpp  scope_tracepoint_native.cpp  scope_tracing_provider.cpp  tracepoint_collector_native.cpp  tracepoint_collector_native.h
scalopus_lttng/test/: CMakeLists.txt  start  test_ctfevent.cpp  test_endpoint_scope_tracing.cpp  test_lttng_tracing_macros.cpp  test_native_tracing_macros.cpp  test_ringbuffer.cpp
scalopus_provider/: CMakeLists.txt
scalopus_provider/example/: example_scope_tracepoints.cpp
scalopus_provider/src/: compile_time_crc.hpp  exposer.cpp  scope_trace_raii.cpp  scope_trace_tracker.cpp  scope_tracepoint.cpp  scope_tracepoint.h  scope_tracepoints.cpp  scope_tracepoints.h
scalopus_python/: CMakeLists.txt  README.md  native_libs.txt  native_libs.txt.in  setup.py.in
scalopus_python/examples/: README.md  embedded_catapult_server.py  python_provider_example.py  readme_example.py  readme_example_lttng.py  showcase_counters.py
scalopus_python/lib/: json_util.cpp  json_util.h  main.cpp  module.cpp  pybind_fix.h  python_test_helpers.cpp  python_test_helpers.h  scalopus_catapult.cpp  scalopus_catapult.h  scalopus_general.cpp  scalopus_general.h  scalopus_interface.cpp  scalopus_interface.h  scalopus_tracing.cpp  scalopus_tracing.h  scalopus_transport.cpp  scalopus_transport.h
scalopus_python/scalopus/: __init__.py  __main__.py  common.py  general.py  interface.py  lib.py  scalopus_python_lib.py  tracing.py  transport.py
scalopus_python/test/: test_endpoint.py  test_json_conversion.py  test_load.py  test_subclassing_provider.py  test_tracing.py  test_tracing_exposer.py
scalopus_tracing/: CMakeLists.txt  README.md
scalopus_tracing/src/: babeltrace_tool.cpp  ctfevent.cpp  endpoint_scope_tracing.cpp  endpoint_trace_configurator.cpp  endpoint_trace_mapping.cpp  lttng_provider.cpp  lttng_source.cpp  native_trace_endpoint_sender.cpp  scope_trace_raii.cpp  scope_trace_tracker.cpp  scope_tracepoint_lttng.cpp  scope_tracepoint_lttng_definition.h  scope_tracepoint_native.cpp  scope_tracing_provider.cpp  spsc_ringbuffer.h  static_string_tracker.cpp  trace_configuration_raii.cpp  trace_configurator.cpp
scalopus_tracing/test/: CMakeLists.txt  listen  start  stop  test_cbor_serializer.cpp  test_ctfevent.cpp  test_endpoint_scope_tracing.cpp  test_lttng_tracing_macros.cpp  test_native_tracepoints.cpp  test_native_tracing_macros.cpp  test_ringbuffer.cpp  test_tracepoint_enable_disable.cpp  test_tracing_macros.cpp
scalopus_transport/: CMakeLists.txt  README.md
scalopus_transport/src/: client.cpp  client_introspect.cpp  consumer.h  endpoint.cpp  endpoint_introspect.cpp  endpoint_tool.cpp  introspect_endpoints.cpp  protocol.cpp  protocol.h  transport.cpp  transport_client.cpp  transport_client_unix.cpp  transport_client_unix.h  transport_loopback.cpp  transport_loopback.h  transport_mock.cpp  transport_mock.h  transport_server.cpp  transport_server_unix.cpp  transport_server_unix.h  transport_unix.cpp  transport_unix.h
scalopus_transport/test/: CMakeLists.txt  test_transport_loopback.cpp  test_transport_mock.cpp  test_transport_unix.cpp  test_transport_util.h
(+132 files in other folders)
